--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,5 @@
-# Copyright 2024 isaki
+# SPDX-License-Identifier: Apache-2.0
+# Copyright 2025 isaki
 
 set(Boost_USE_STATIC_LIBS ON)
 find_package(Boost REQUIRED COMPONENTS program_options)
