--- a/configured_files/CMakeLists.txt
+++ b/configured_files/CMakeLists.txt
@@ -1,5 +1,8 @@
 # Copyright 2025 isaki
 
+file(REAL_PATH "${CMAKE_CXX_COMPILER}" REAL_CXX_COMPILER)
+cmake_path(GET REAL_CXX_COMPILER FILENAME REAL_CXX_COMPILER_NAME) 
+
 configure_file(
     "config.hpp.in"
     "${CMAKE_BINARY_DIR}/configured_files/include/bitdiff_internal/config.hpp"
