--- a/configured_files/config.hpp.in
+++ b/configured_files/config.hpp.in
@@ -8,12 +8,13 @@
 
 namespace isaki::bitdiff::cmake
 {
+    // Project Info
     inline constexpr std::string_view project_name = "@PROJECT_NAME@";
     inline constexpr std::string_view project_version = "@PROJECT_VERSION@";
-    inline constexpr int project_version_major { @PROJECT_VERSION_MAJOR@ };
-    inline constexpr int project_version_minor { @PROJECT_VERSION_MINOR@ };
-    inline constexpr int project_version_patch { @PROJECT_VERSION_PATCH@ };
-    inline constexpr int project_version_tweak { @PROJECT_VERSION_TWEAK@ };
+
+    // Compiler Info
+    inline constexpr std::string_view cxx_compiler = "@REAL_CXX_COMPILER_NAME@";
+    inline constexpr std::string_view cxx_compiler_ver = "@CMAKE_CXX_COMPILER_VERSION@";
 }
 
 #endif
