--- a/configured_files/config.hpp.in
+++ b/configured_files/config.hpp.in
@@ -1,8 +1,7 @@
 /* SPDX-License-Identifier: Apache-2.0 */
 /* Copyright 2025 isaki */
 
-#ifndef __BITDIFF_CONFIG_HPP__
-#define __BITDIFF_CONFIG_HPP__
+#pragma once
 
 #include <string_view>
 
@@ -16,5 +15,3 @@ namespace isaki::bitdiff::cmake
     inline constexpr std::string_view cxx_compiler = "@REAL_CXX_COMPILER_NAME@";
     inline constexpr std::string_view cxx_compiler_ver = "@CMAKE_CXX_COMPILER_VERSION@";
 }
-
-#endif
