--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,8 +7,7 @@ find_package(Boost REQUIRED COMPONENTS program_options)
 add_executable(bitdiff
     dataout.cpp
     bitdiff.cpp
-
-    # Main should be last
+    version.cpp
     main.cpp
 )
 
