--- a/configured_files/config.hpp.in
+++ b/configured_files/config.hpp.in
@@ -17,4 +17,8 @@ namespace isaki::bitdiff::cmake
 
     // Other Data
     inline constexpr std::string_view project_url = "@CMAKE_PROJECT_HOMEPAGE_URL@";
+
+    // System Information
+    inline constexpr std::string_view build_architecture = "@CMAKE_SYSTEM_PROCESSOR@";
+    inline constexpr std::string_view build_platform = "@CMAKE_SYSTEM_NAME@";
 }
