--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,6 +5,7 @@ set(Boost_USE_STATIC_LIBS ON)
 find_package(Boost REQUIRED COMPONENTS program_options)
 
 add_executable(bitdiff
+    reader.cpp
     dataout.cpp
     bitdiff.cpp
     version.cpp
@@ -15,7 +16,6 @@ target_include_directories(bitdiff
     PRIVATE
     "${CMAKE_BINARY_DIR}/configured_files/include"
     "${PROJECT_SOURCE_DIR}/include"
-    "${PROJECT_BINARY_DIR}/include"
 )
 
 target_link_libraries(bitdiff PRIVATE Boost::program_options)
