--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,11 @@
-# SPDX-License-Identifier: Apache-2.0
+# SPDX-License-Identifier: GPL-2.0-or-later
 # Copyright 2025 isaki
 
 cmake_minimum_required(VERSION 4.0.3)
 
 project(
     BitDiff
-    VERSION 1.2.5
+    VERSION 1.3.0
     LANGUAGES CXX
     HOMEPAGE_URL "https://github.com/isaki/bitdiff")
 
